--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -26,7 +26,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
         run: |
-          echo $USER_NAME
+          echo ${{ secrets.USER_NAME }}
           git config --global user.email $USER_EMAIL
           git config --global user.name $USER_NAME
           git remote set-url origin https://$USER_NAME:$GITHUB_TOKEN@github.com/$USER_NAME/blarknes.github.io.git
