--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -21,10 +21,10 @@ jobs:
 
       - name: Run deploy command
         env:
-          EMAIL: ${{ secrets.USER_EMAIL }}
-          NAME: ${{ secrets.USER_NAME }}
+          EMAIL: ${{ secrets.EMAIL }}
+          USERNAME: ${{ secrets.USERNAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
         run: |
           git config --global user.email $EMAIL
-          git config --global user.name $NAME
+          git config --global user.name $USERNAME
