--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -25,5 +25,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
         run: |
+          git config --global user.name $USERNAME
           git remote set-url origin https://$USERNAME:$GH_TOKEN@github.com/$USERNAME/blarknes.github.io.git
           npm run deploy
