--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
+    "gh-pages": "^6.1.1",
     "sass": "^1.69.0",
     "svelte": "^4.0.5",
+    "svelte-icons": "^2.1.0",
+    "svelte-loading-spinners": "^0.3.6",
     "svelte-preprocess": "^5.0.4",
     "vite": "^4.4.2"
   },
-  "type": "module",
-  "dependencies": {
-    "gh-pages": "^6.0.0",
-    "svelte-icons": "^2.1.0"
-  }
+  "type": "module"
 }
