--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "blarknes.github.io",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -18,6 +19,5 @@
     "svelte-loading-spinners": "^0.3.6",
     "svelte-preprocess": "^5.0.4",
     "vite": "^4.4.2"
-  },
-  "type": "module"
+  }
 }
