--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "blarknes.github.io",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview",
+    "check": "svelte-check --tsconfig tsconfig.json",
     "deploy": "npm i && npm run build && gh-pages -d build -t true"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^2.0.3",
-    "@sveltejs/kit": "^1.20.4",
-    "gh-pages": "^6.1.1",
-    "sass": "^1.69.0",
-    "svelte": "^4.0.5",
-    "svelte-icons": "^2.1.0",
+    "@iconify-json/dashicons": "^1.2.1",
+    "@iconify-json/fluent": "^1.2.20",
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/ri": "^1.2.5",
+    "@iconify-json/simple-icons": "^1.2.33",
+    "@sveltejs/adapter-static": "^3.0.8",
+    "@sveltejs/kit": "^2.20.8",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "gh-pages": "^6.3.0",
+    "sass": "^1.87.0",
+    "svelte": "^5.28.2",
+    "svelte-check": "^4.1.7",
     "svelte-loading-spinners": "^0.3.6",
-    "svelte-preprocess": "^5.0.4",
-    "vite": "^4.4.2"
+    "svelte-preprocess": "^6.0.3",
+    "svelte-typewrite": "^3.0.0",
+    "typescript": "^5.8.3",
+    "unplugin-icons": "^22.1.0",
+    "vite": "^6.3.4"
   }
 }
