--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm i
 
+      - name: Generate Svelte files
+        run: npm run prepare
+
       - name: Check Svelte files syntax
         run: npm run check
 
