--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
+    "dev:host": "vite dev --host",
     "build": "vite build",
     "prepare": "svelte-kit sync",
     "check": "svelte-check --tsconfig tsconfig.json",
