chore: update urls and bot name to match new profiles

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Deploy with gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: blarknes.github.io
+          GITHUB_REPOSITORY: ghastlith.github.io
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npm run deploy -- -u "blarknes-bot <support+actions@github.com>"
+          npm run deploy -- -u "ghastlith-bot <support+actions@github.com>"
