--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blarknes.github.io",
+  "name": "ghastlith.github.io",
   "version": "3.0.0",
   "type": "module",
   "private": true,
